added recipes.csv and updated code for reading from file

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Recipe Finder</string>
+    <string name="txtViewTitle">Recipes</string>
+    <string name="txtViewIngred">Ingredients:</string>
+    <string name="txtViewDir">Directions:</string>
 </resources>
