added ingredients.csv, added IngredientsAdapter and code for ingredients checkboxes

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,7 @@
     <string name="txtViewTitle">Recipes</string>
     <string name="txtViewIngred">Ingredients:</string>
     <string name="txtViewDir">Directions:</string>
+    <string name="txtViewMainTitle">Ingredients</string>
+    <string name="editTxtSearchIngredient">Search Ingredients</string>
+    <string name="btnSearchIngredients">Search</string>
 </resources>
