added separate search button to search recipe and added comments to code

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,5 +5,6 @@
     <string name="txtViewDir">Directions:</string>
     <string name="txtViewMainTitle">Ingredients</string>
     <string name="editTxtSearchIngredient">Search Ingredients</string>
-    <string name="btnSearchIngredients">Search</string>
+    <string name="btnSearchIngredients">Search Ingredients</string>
+    <string name="btnSearchRecipes">Search Recipes</string>
 </resources>
