--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,9 @@
     <string name="txtViewTitle">Recipes</string>
     <string name="txtViewIngred">Ingredients:</string>
     <string name="txtViewDir">Directions:</string>
+    <string name="TxtTitle">"Test Page by Hye Kyung "</string>
+    <string name="BtnTestTxt">Test</string>
+    <string name="txtRestListTitle">Recipes</string>
+    <string name="editTxtServingSize">Serving Size (deafult: 1)</string>
+    <string name="txtRecipeResultTxt" >recipe name</string>
 </resources>
