Added a skip button for the login

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,4 +40,5 @@
     <string name="TextViewSocial">Or Signin With</string>
     <string name="checkBox">Remember me</string>
     <string name="textViewSignIn">Register</string>
+    <string name="textViewSkip">Skip</string>
 </resources>
