Sign in with google

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -41,4 +41,5 @@
     <string name="checkBox">Remember me</string>
     <string name="textViewSignIn">Register</string>
     <string name="textViewSkip">Skip</string>
+    <string name="btnsignOut">SignOut</string>
 </resources>
