changed login and skip from textview to button on register page and redirected the buttons to corresponding pages - skip now works properly. linked sign out button to findviewbyid to fix error.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -41,5 +41,6 @@
     <string name="checkBox">Remember me</string>
     <string name="textViewSignIn">Register</string>
     <string name="textViewSkip">Skip</string>
-    <string name="btnsignOut">SignOut</string>
+    <string name="btnSignOut">SignOut</string>
+    <string name="btnSkipLogin">Skip</string>
 </resources>
