Removed google sign in in main activity, added share feature in recipe display

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -44,4 +44,6 @@
     <string name="btnSignOut">SignOut</string>
     <string name="btnSkipLogin">Skip</string>
     <string name="btnMyFavoriteTxt">Favourites</string>
+    <string name="EditTxtMsg">Enter Message</string>
+    <string name="btnShare">Share Recipe</string>
 </resources>
